src/test/deca/syntax/invalid/else_conditionnel.deca
//  Description :
//            Structure ifthenelse avec un else conditionnel
//
// Résultat:
//no viable alternative at input 'else('
//
{
    if(bool){}
    else(notbool){}
}